# open-ire

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml  scrapy.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
docs/: architecture.md  index.md  sharepoint.md
notebooks/: metadata_analysis.py  unavailable_articles.py
src/api/eric/: bruno.json  search.bru
src/api/osti/: bruno.json  search.bru
src/migrations/versions/: 0f0e24e01947_initial_schema.py
src/open_ire/: __init__.py  author.py  db.py  enums.py  errors.py  faculty.py  items.py  links.py  logging.py  middlewares.py  models.py  pipelines.py  settings.py  sharepoint.py  utils.py
src/open_ire/migrations/: env.py
src/open_ire/migrations/versions/: de4a71ae327c_articleauthor_becomes_authorship.py
src/open_ire/pipelines/: __init__.py  author_identifier_pipeline.py  authorship_pipeline.py  base_sql_model_pipeline.py  cross_source_dedup_pipeline.py  doi_duplicates_pipeline.py  doi_normalization_pipeline.py  duplicates_pipeline.py  file_reference_pipeline.py  local_file_pipeline.py  sharepoint_pipeline.py  skip_existing_pipeline.py  sql_model_pipeline.py
src/open_ire/settings/: __init__.py  base.py  development.py  production.py
src/open_ire/spiders/: cdc_stacks.py  datamart.py  deposit_warrant.py  doaj.py  doi_license.py  epa.py  eric.py  gsearch.py  noaa.py  noaa_ir.py  noaa_meta.py  oa_doaj.py  oa_evidence.py  oa_faculty.py  oa_license.py  oap_base.py  oap_openalex.py  oap_wos.py  openalex.py  osti.py  pmc.py  search.py  unavailable_articles.py  wos.py
tests/: conftest.py  test_author.py  test_author_models.py  test_items.py  test_middlewares.py  test_pipelines.py  test_sharepoint.py  test_utils.py
tests/integration/: conftest.py  test_oap_crawl.py
tests/pipelines/: conftest.py  test_author_identifier_pipeline.py  test_authorship_pipeline.py  test_base_sql_model_pipeline.py  test_cross_source_dedup_pipeline.py  test_doi_duplicates_pipeline.py  test_doi_normalization_pipeline.py  test_duplicates_pipeline.py  test_sharepoint_pipeline.py  test_skip_existing_pipeline.py  test_sql_model_pipeline.py
tests/spiders/: conftest.py  test_author_search.py  test_cdc_stacks.py  test_datamart.py  test_doaj.py  test_doi_license.py  test_epa.py  test_eric.py  test_noaa.py  test_noaa_ir.py  test_noaa_meta.py  test_oa_doaj.py  test_oa_license.py  test_oap_openalex.py  test_oap_wos.py  test_openalex.py  test_pmc.py  test_search.py  test_unavailable_articles.py  test_wos.py
