[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "open_ire"
dynamic = ["version"]
description = "A configurable crawler for collecting articles from open-access research repositories."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "msgraph-sdk",
    "pandas",
    "playwright",
    "python-dateutil",
    "python-dotenv",
    "rapidfuzz",
    "requests",
    "scrapy",
    "scrapy-playwright",
    "sqlmodel",
]

[project.optional-dependencies]
dev = [
    "nox",
    "pre-commit",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pytest",
    "types-python-dateutil",
]
docs = [
    "jupyter-book",
    "numpydoc",
    "sphinx-automodapi",
    "sphinx-panels",
    "sphinx_rtd_theme",
    "sphinxcontrib-mermaid",
]
all = ["open_ire[dev,docs]"]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/uw-ssec/python-project-template"
Documentation = "https://ssec-python-project-template.readthedocs.io"
Repository = "https://github.com/uw-ssec/python-project-template.git"
Issues = "https://github.com/uw-ssec/python-project-template/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/open_ire/version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-vvv", "-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = false
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.mypy]
files = ["src", "tests"]
mypy_path = ["src"]
python_version = "3.11"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "open_ire.*"
disallow_incomplete_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "msgraph_core.*"
ignore_missing_imports = true

[tool.ruff]
exclude = ["tests/**", "testing.py"]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "B", # flake8-bugbear
    "I", # isort
    "ARG", # flake8-unused-arguments
    "C4", # flake8-comprehensions
    "EM", # flake8-errmsg
    "ICN", # flake8-import-conventions
    "G", # flake8-logging-format
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "EXE", # flake8-executable
    "NPY", # NumPy specific rules
    "PD", # pandas-vet
]
ignore = [
    "PLR09", # Too many <...>
    "PLR2004", # Magic value used in comparison
    "ISC001", # Conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]

[dependency-groups]
dev = [
    "ruff",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
open_ire = { path = ".", editable = true }

[tool.pixi.feature.dev.pypi-dependencies]
open_ire = { path = ".", editable = true, extras = ["dev"] }

[tool.pixi.feature.docs.pypi-dependencies]
open_ire = { path = ".", editable = true, extras = ["docs"] }

[tool.pixi.environments]
default = { solve-group = "default" }
all = { features = ["dev", "docs"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.tasks]
dotenv = "mkdir output && cp .env.example .env"

[tool.pixi.tasks.start]
args = ["spider"]
cmd = "scrapy crawl {{ spider }} -s JOBDIR=crawls/{{ spider }}"

[tool.pixi.tasks.spider]
args = [
    "spider",
    { "arg" = "page", "default" = "1" },
    { "arg" = "terms", "default" = "university of washington" },
]
cmd = "scrapy crawl {{ spider }} -a page={{ page }} -a terms=\"{{ terms }}\""

[tool.pixi.tasks.oap]
args = ["spider", "faculty_file"]
cmd = "scrapy crawl oap_{{ spider }} -a faculty_csv={{ faculty_file }}"

[tool.pixi.feature.dev.tasks]
pre-commit = "pre-commit run"
pre-commit-all = "pre-commit run --all-files"
pre-commit-install = "pre-commit install"
test = "python -m pytest -ra --cov=open_ire"

[tool.pixi.dependencies]
pixi-pycharm = ">=0.0.8,<0.0.9"

[tool.pixi.feature.dev.dependencies]
pre-commit = ">=4.2.0,<5"
python = "<=3.13.0"
