# ===
# Build and packaging
# ===
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "open_ire"
dynamic = ["version"]
description = "A configurable crawler for collecting articles from open-access research repositories."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "alembic",
    "msgraph-sdk",
    "nameparser",
    "pandas",
    "playwright",
    "python-dateutil",
    "python-dotenv",
    "rapidfuzz",
    "requests",
    "scrapy",
    "scrapy-playwright",
    "sqlmodel",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/uw-ssec/open-ire"
Documentation = "https://github.com/uw-ssec/open-ire/tree/main/docs"
Repository = "https://github.com/uw-ssec/open-ire.git"
Issues = "https://github.com/uw-ssec/open-ire/issues"

[project.optional-dependencies]
dev = [
    "altair",
    "ipython",
    "marimo",
    "mypy",
    "nox",
    "pre-commit",
    "pyarrow",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "ruff",
    "scikit-learn",
    "types-nameparser",
    "types-python-dateutil",
    "types-requests",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/open_ire/version.py"

# ===
# Developer tooling
# ===
[tool.mypy]
files = ["src", "tests"]
mypy_path = ["src"]
python_version = "3.12"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# msgraph is huge and auto-generated; slows mypy significantly
[[tool.mypy.overrides]]
module = ["msgraph_core.*", "msgraph.*"]
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-vvv", "-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = false
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.check-wheel-contents]
# Alembic migration files use hex revision IDs that conflict with W004
ignore = ["W004"]

[tool.repo-review.ignore]
RTD = "Documentation is served as plain Markdown on GitHub"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "B", # flake8-bugbear
    "I", # isort
    "ARG", # flake8-unused-arguments
    "C4", # flake8-comprehensions
    "EM", # flake8-errmsg
    "ICN", # flake8-import-conventions
    "G", # flake8-logging-format
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "EXE", # flake8-executable
    "NPY", # NumPy specific rules
    "PD", # pandas-vet
]
ignore = [
    "PLR09", # Too many <...>
    "PLR2004", # Magic value used in comparison
    "ISC001", # Conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001", "ARG002", "ARG003", "T20"]
"noxfile.py" = ["T20"]
"notebooks/**" = ["ARG001", "T20", "PLC0415", "PLR1711"]

# ===
# Pixi environments, dependencies, and tasks
# ===
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "win-64"]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.dependencies]
pixi-pycharm = ">=0.0.10,<0.0.11"
python = "3.13.*"

[tool.pixi.pypi-dependencies]
open_ire = { path = ".", editable = true }

[tool.pixi.feature.dev.pypi-dependencies]
open_ire = { path = ".", editable = true, extras = ["dev"] }

[tool.pixi.feature.dev.tasks]
pre-commit = "pre-commit run"
pre-commit-all = "pre-commit run --all-files"
pre-commit-install = "pre-commit install"
test = "python -m pytest -ra --cov=open_ire"

[tool.pixi.feature.dev.tasks.migrate]
cmd = "alembic upgrade head"

[tool.pixi.feature.dev.tasks.migration]
args = ["message"]
cmd = "alembic revision --autogenerate -m \"{{ message }}\""

[tool.pixi.feature.dev.tasks.migrate-stamp]
cmd = "alembic stamp head"

[tool.pixi.feature.dev.tasks.migrate-history]
cmd = "alembic history --verbose"

# User-facing tasks

[tool.pixi.tasks.dotenv]
cmd = "mkdir -p output && cp -n .env.example .env"

[tool.pixi.tasks.resume]
args = [
    "spider",
    { "arg" = "flag", "default" = "" },
]
cmd = "scrapy crawl {{ spider }} -s JOBDIR=crawls/{{ spider }}{% if '--skip-existing' in flag %} -s OPEN_IRE_SKIP_EXISTING=True{% endif %}"

[tool.pixi.tasks.search-author]
args = ["spider", "author_name"]
cmd = "scrapy crawl {{ spider }} -a author_name=\"{{ author_name }}\""

[tool.pixi.tasks.search-authors]
args = ["spider", "author_csv"]
cmd = "scrapy crawl {{ spider }} -a author_csv=\"{{ author_csv }}\""

[tool.pixi.tasks.search-terms]
args = ["spider", "terms", "page"]
cmd = "scrapy crawl {{ spider }} -a page={{ page }} -a terms=\"{{ terms }}\""
